# CarinaDebuggingTools

./: .gitignore  .gitmodules  CMakeLists.txt  format-all.sh
BusDebugger/: .gitignore  CMakeLists.txt  format-all.sh
BusDebugger/BusRecorder/: CMakeLists.txt
BusDebugger/BusRecorderGUI/: CMakeLists.txt  FPSMonitor.h  GUI.cpp  GUI.h  TimeslotGUIWidgets.h  main.cpp
BusDebugger/CarinaBusDecoder/: CMakeLists.txt  Decoder.h  RecordedLogFile.cpp  RecordedLogFileWriter.cpp  RecordedLogFileWriter.h  TimestampedBytesHeader.h  ValuePacketValues.cpp
BusDebugger/CompilerSupport/: CMakeLists.txt  CompilerSupport.h
BusDebugger/LogFileDecoder/: BasicPacketOutput.cpp  BasicPacketOutput.h  CMakeLists.txt  CorruptPacketOutput.cpp  CorruptPacketOutput.h  main.cpp
BusDebugger/Serial/: SerialPort.h
BusDebugger/SerialWindows/: SerialPort.cpp  SerialPort.h
BusDebugger/submodules/: CMakeLists.txt
BusRecorder/: CMakeLists.txt  main.cpp
BusRecorderGUI/: CMakeLists.txt  FPSMonitor.cpp  FPSMonitor.h  GUI.cpp  GUI.h  TimeslotGUIWidgets.cpp  TimeslotGUIWidgets.h  main.cpp
CarinaBusDebugger/: CMakeLists.txt  main.cpp
CarinaBusDecoder/: CMakeLists.txt  DecodedPacketDestination.h  Decoder.cpp  Decoder.h  RawPacketDestination.h  RecordedLogFile.cpp  RecordedLogFile.h  RecordedLogFileWriter.cpp  RecordedLogFileWriter.h  TimestampedBytesHeader.h  ValuePacketValues.cpp  ValuePacketValues.h
DecoderDemo/: CMakeLists.txt  SerialPort.cpp  SerialPort.h  main.cpp
LogFileDecoder/: CMakeLists.txt  main.cpp
Serial/: CMakeLists.txt  SerialPort.cpp
SourceCodeProFont/: CMakeLists.txt  SourceCodeProFont.cpp  SourceCodeProFont.h
StateMachineTools/: .gitignore  StateMachineTools.sln
StateMachineTools/Carina.StateMachines/: Action.cs  ActionSetScreen.cs  ActionSetValue.cs  ActionSwitchStateMachine.cs  BusValueGroup.cs  BusValueItem.cs  BusValueList.cs  Condition.cs  ConditionAggregate.cs  ConditionComparison.cs  ConditionIsValid.cs  ConditionTimed.cs  ConstantValueGroup.cs  ConstantValueItem.cs  ConstantValueList.cs  LanguageElement.cs  LanguageElementParameter.cs  LanguageText.cs  ModuleType.cs  ModuleVariant.cs  Project.cs  State.cs  StateBase.cs  StateMachine.cs  TimeSlot.cs  Transition.cs  ValueGroup.cs  ValueInstance.cs  ValueInstanceItem.cs  ValueInstanceItemBus.cs  ValueItem.cs  ValueList.cs
StateMachineTools/ConvertProject/: .gitignore  Program.cs
StateMachineTools/ConverterForLogFileDecoder/: ConverterForLogFileDecoder.csproj  Program.cs
TxENMonitor/: PIC32MX150F128BConfigurationBits.c  TxENMonitor.cpp  TxENMonitor.mc3  main.c  main.cpp
TxENMonitor/mcc_generated_files/: interrupt_manager.c  mcc.c  mcc.h  pin_manager.c  pin_manager.h
TxENMonitor/nbproject/: configurations.xml  project.xml
submodules/: CMakeLists.txt
